--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,10 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
+.card-header {
+  padding: 0 !important;
+}
+
 
 @layer base {
   * {
